--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -26,19 +26,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dotenv extension is already loaded. To reload it, use:\n",
+      "  %reload_ext dotenv\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your code below.\n",
-    "\n"
+    "%load_ext dotenv\n",
+    "%dotenv  \"..\\01_materials\\labs\\.env\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Himeshi II\\miniconda3\\envs\\dsi_participant\\lib\\site-packages\\dask\\dataframe\\_pyarrow_compat.py:15: FutureWarning: Minimal version of pyarrow will soon be increased to 14.0.1. You are using 11.0.0. Please consider upgrading.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import dask.dataframe as dd"
    ]
@@ -55,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,6 +82,8 @@
     "from glob import glob\n",
     "\n",
     "# Write your code below.\n",
+    "PRICE_DATA = os.getenv(\"PRICE_DATA\")\n",
+    "parquet_files = glob(os.path.join(PRICE_DATA, \"*/*.parquet\"))\n",
     "\n"
    ]
   },
@@ -88,12 +109,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Himeshi II\\AppData\\Local\\Temp\\ipykernel_8640\\649059614.py:9: UserWarning: `meta` is not specified, inferred from partial data. Please provide `meta` if the result is unexpected.\n",
+      "  Before: .apply(func)\n",
+      "  After:  .apply(func, meta={'x': 'f8', 'y': 'f8'}) for dataframe result\n",
+      "  or:     .apply(func, meta=('x', 'f8'))            for series result\n",
+      "  dd_feat = (dd_px.groupby('ticker', group_keys=False).apply(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><strong>Dask DataFrame Structure:</strong></div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "      <th>year</th>\n",
+       "      <th>Close_lag_1</th>\n",
+       "      <th>returns</th>\n",
+       "      <th>hi_lo_range</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>npartitions=49</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>datetime64[ns, America/New_York]</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>int64</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>int32</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ABNB</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YUM</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YUM</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<div>Dask Name: assign, 14 expressions</div>"
+      ],
+      "text/plain": [
+       "Dask DataFrame Structure:\n",
+       "                                            Date     Open     High      Low    Close Volume Dividends Stock Splits   year Close_lag_1  returns hi_lo_range\n",
+       "npartitions=49                                                                                                                                            \n",
+       "A               datetime64[ns, America/New_York]  float64  float64  float64  float64  int64   float64      float64  int32     float64  float64     float64\n",
+       "ABNB                                         ...      ...      ...      ...      ...    ...       ...          ...    ...         ...      ...         ...\n",
+       "...                                          ...      ...      ...      ...      ...    ...       ...          ...    ...         ...      ...         ...\n",
+       "YUM                                          ...      ...      ...      ...      ...    ...       ...          ...    ...         ...      ...         ...\n",
+       "YUM                                          ...      ...      ...      ...      ...    ...       ...          ...    ...         ...      ...         ...\n",
+       "Dask Name: assign, 14 expressions\n",
+       "Expr=Assign(frame=Assign(frame=Assign(frame=Assign(frame=GroupByApply(frame=SetIndex(frame=ReadParquetFSSpec(061094b), _other='ticker', options={}), observed=False, group_keys=False, func=<function <lambda> at 0x00000186D18CF5E0>, meta=<no_default>, args=(), kwargs={})))))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your code below.\n",
-    "\n"
+    "import dask.dataframe as dd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Read parquet files into a dask dataframe and index by ticker\n",
+    "dd_px = dd.read_parquet(parquet_files).set_index(\"ticker\")\n",
+    "\n",
+    "# Add lags for Close and Adj_Close variables and calculate returns\n",
+    "dd_feat = (dd_px.groupby('ticker', group_keys=False).apply(\n",
+    "    lambda x: x.assign(Close_lag_1 = x['Close'].shift(1))\n",
+    ").assign(\n",
+    "    returns = lambda x: x['Close']/x['Close_lag_1'] - 1\n",
+    ").assign(\n",
+    "    hi_lo_range=lambda x: x['High'] - x['Low']\n",
+    "))\n",
+    "\n",
+    "dd_feat\n"
    ]
   },
   {
@@ -109,12 +291,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your code below.\n",
-    "\n"
+    "\n",
+    "pd_feat = dd_feat.compute()\n",
+    "\n",
+    "pd_feat['rolling_avg_returns'] = (\n",
+    "    pd_feat.groupby('ticker')['returns']  # Group by ticker\n",
+    "    .transform(lambda x: x.rolling(window=10).mean())  # Apply rolling mean\n",
+    ")\n",
+    "\n",
+    "# It was not strictly necessary to convert to pandas to calculate the moving average. However, according to dask dataframe best practices, it is recommended that dask dataframes are only used when the use case justifies it (ex: dataset is too large to be loaded into memory). The best practice is to use pandas for transformations when possible. \n",
+    "# Therefore, it's not better to have used Dask. "
    ]
   },
   {
@@ -166,7 +357,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -180,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
