Modified assignment-1 in response to feedback

--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -46,18 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Himeshi II\\miniconda3\\envs\\dsi_participant\\lib\\site-packages\\dask\\dataframe\\_pyarrow_compat.py:15: FutureWarning: Minimal version of pyarrow will soon be increased to 14.0.1. You are using 11.0.0. Please consider upgrading.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import dask.dataframe as dd"
    ]
@@ -74,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +244,7 @@
        "Expr=Assign(frame=Assign(frame=Assign(frame=Assign(frame=GroupByApply(frame=SetIndex(frame=ReadParquetFSSpec(061094b), _other='ticker', options={}), observed=False, group_keys=False, func=<function <lambda> at 0x00000186D18CF5E0>, meta=<no_default>, args=(), kwargs={})))))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,9 +282,367 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "      <th>year</th>\n",
+       "      <th>Close_lag_1</th>\n",
+       "      <th>returns</th>\n",
+       "      <th>hi_lo_range</th>\n",
+       "      <th>rolling_avg_returns</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ticker</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-02 00:00:00-05:00</td>\n",
+       "      <td>34.875487</td>\n",
+       "      <td>35.005933</td>\n",
+       "      <td>34.640679</td>\n",
+       "      <td>34.705902</td>\n",
+       "      <td>2039962</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.365255</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-03 00:00:00-05:00</td>\n",
+       "      <td>34.516748</td>\n",
+       "      <td>34.679811</td>\n",
+       "      <td>34.281940</td>\n",
+       "      <td>34.523270</td>\n",
+       "      <td>3462706</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>34.705902</td>\n",
+       "      <td>-0.005262</td>\n",
+       "      <td>0.397871</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-04 00:00:00-05:00</td>\n",
+       "      <td>34.464556</td>\n",
+       "      <td>35.110279</td>\n",
+       "      <td>34.386289</td>\n",
+       "      <td>34.947216</td>\n",
+       "      <td>3377288</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>34.523270</td>\n",
+       "      <td>0.012280</td>\n",
+       "      <td>0.723990</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-05 00:00:00-05:00</td>\n",
+       "      <td>34.797217</td>\n",
+       "      <td>35.090727</td>\n",
+       "      <td>34.647202</td>\n",
+       "      <td>34.895054</td>\n",
+       "      <td>2530939</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>34.947216</td>\n",
+       "      <td>-0.001493</td>\n",
+       "      <td>0.443525</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-06 00:00:00-05:00</td>\n",
+       "      <td>35.064632</td>\n",
+       "      <td>35.827754</td>\n",
+       "      <td>35.064632</td>\n",
+       "      <td>35.762531</td>\n",
+       "      <td>4268513</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>34.895054</td>\n",
+       "      <td>0.024860</td>\n",
+       "      <td>0.763122</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-09 00:00:00-05:00</td>\n",
+       "      <td>35.742959</td>\n",
+       "      <td>36.153871</td>\n",
+       "      <td>35.703824</td>\n",
+       "      <td>35.912540</td>\n",
+       "      <td>2961663</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>35.762531</td>\n",
+       "      <td>0.004195</td>\n",
+       "      <td>0.450047</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-10 00:00:00-05:00</td>\n",
+       "      <td>35.814715</td>\n",
+       "      <td>36.173451</td>\n",
+       "      <td>35.632086</td>\n",
+       "      <td>36.095181</td>\n",
+       "      <td>3253006</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>35.912540</td>\n",
+       "      <td>0.005086</td>\n",
+       "      <td>0.541365</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-11 00:00:00-05:00</td>\n",
+       "      <td>36.101695</td>\n",
+       "      <td>36.323459</td>\n",
+       "      <td>35.664692</td>\n",
+       "      <td>35.769051</td>\n",
+       "      <td>3277751</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>36.095181</td>\n",
+       "      <td>-0.009035</td>\n",
+       "      <td>0.658767</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-12 00:00:00-05:00</td>\n",
+       "      <td>35.632084</td>\n",
+       "      <td>36.212584</td>\n",
+       "      <td>35.416845</td>\n",
+       "      <td>36.042999</td>\n",
+       "      <td>3794591</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>35.769051</td>\n",
+       "      <td>0.007659</td>\n",
+       "      <td>0.795739</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-13 00:00:00-05:00</td>\n",
+       "      <td>36.108207</td>\n",
+       "      <td>36.460420</td>\n",
+       "      <td>35.808175</td>\n",
+       "      <td>35.977760</td>\n",
+       "      <td>2827595</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>36.042999</td>\n",
+       "      <td>-0.001810</td>\n",
+       "      <td>0.652245</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-16 00:00:00-05:00</td>\n",
+       "      <td>36.036483</td>\n",
+       "      <td>36.388693</td>\n",
+       "      <td>35.919080</td>\n",
+       "      <td>36.029961</td>\n",
+       "      <td>2356329</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>35.977760</td>\n",
+       "      <td>0.001451</td>\n",
+       "      <td>0.469613</td>\n",
+       "      <td>0.003793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-17 00:00:00-05:00</td>\n",
+       "      <td>36.499562</td>\n",
+       "      <td>37.367049</td>\n",
+       "      <td>36.401725</td>\n",
+       "      <td>36.766983</td>\n",
+       "      <td>4484784</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>36.029961</td>\n",
+       "      <td>0.020456</td>\n",
+       "      <td>0.965324</td>\n",
+       "      <td>0.006365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-18 00:00:00-05:00</td>\n",
+       "      <td>36.851781</td>\n",
+       "      <td>37.791010</td>\n",
+       "      <td>36.766988</td>\n",
+       "      <td>37.758400</td>\n",
+       "      <td>5782547</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>36.766983</td>\n",
+       "      <td>0.026965</td>\n",
+       "      <td>1.024022</td>\n",
+       "      <td>0.007833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-19 00:00:00-05:00</td>\n",
+       "      <td>37.549679</td>\n",
+       "      <td>37.719260</td>\n",
+       "      <td>37.223556</td>\n",
+       "      <td>37.425751</td>\n",
+       "      <td>2646694</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>37.758400</td>\n",
+       "      <td>-0.008810</td>\n",
+       "      <td>0.495704</td>\n",
+       "      <td>0.007102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-20 00:00:00-05:00</td>\n",
+       "      <td>37.484458</td>\n",
+       "      <td>37.614908</td>\n",
+       "      <td>37.119204</td>\n",
+       "      <td>37.151814</td>\n",
+       "      <td>4129692</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>37.425751</td>\n",
+       "      <td>-0.007319</td>\n",
+       "      <td>0.495704</td>\n",
+       "      <td>0.003884</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            Date       Open       High        Low      Close  \\\n",
+       "ticker                                                                         \n",
+       "A      2013-12-02 00:00:00-05:00  34.875487  35.005933  34.640679  34.705902   \n",
+       "A      2013-12-03 00:00:00-05:00  34.516748  34.679811  34.281940  34.523270   \n",
+       "A      2013-12-04 00:00:00-05:00  34.464556  35.110279  34.386289  34.947216   \n",
+       "A      2013-12-05 00:00:00-05:00  34.797217  35.090727  34.647202  34.895054   \n",
+       "A      2013-12-06 00:00:00-05:00  35.064632  35.827754  35.064632  35.762531   \n",
+       "A      2013-12-09 00:00:00-05:00  35.742959  36.153871  35.703824  35.912540   \n",
+       "A      2013-12-10 00:00:00-05:00  35.814715  36.173451  35.632086  36.095181   \n",
+       "A      2013-12-11 00:00:00-05:00  36.101695  36.323459  35.664692  35.769051   \n",
+       "A      2013-12-12 00:00:00-05:00  35.632084  36.212584  35.416845  36.042999   \n",
+       "A      2013-12-13 00:00:00-05:00  36.108207  36.460420  35.808175  35.977760   \n",
+       "A      2013-12-16 00:00:00-05:00  36.036483  36.388693  35.919080  36.029961   \n",
+       "A      2013-12-17 00:00:00-05:00  36.499562  37.367049  36.401725  36.766983   \n",
+       "A      2013-12-18 00:00:00-05:00  36.851781  37.791010  36.766988  37.758400   \n",
+       "A      2013-12-19 00:00:00-05:00  37.549679  37.719260  37.223556  37.425751   \n",
+       "A      2013-12-20 00:00:00-05:00  37.484458  37.614908  37.119204  37.151814   \n",
+       "\n",
+       "         Volume  Dividends  Stock Splits  year  Close_lag_1   returns  \\\n",
+       "ticker                                                                  \n",
+       "A       2039962        0.0           0.0  2013          NaN       NaN   \n",
+       "A       3462706        0.0           0.0  2013    34.705902 -0.005262   \n",
+       "A       3377288        0.0           0.0  2013    34.523270  0.012280   \n",
+       "A       2530939        0.0           0.0  2013    34.947216 -0.001493   \n",
+       "A       4268513        0.0           0.0  2013    34.895054  0.024860   \n",
+       "A       2961663        0.0           0.0  2013    35.762531  0.004195   \n",
+       "A       3253006        0.0           0.0  2013    35.912540  0.005086   \n",
+       "A       3277751        0.0           0.0  2013    36.095181 -0.009035   \n",
+       "A       3794591        0.0           0.0  2013    35.769051  0.007659   \n",
+       "A       2827595        0.0           0.0  2013    36.042999 -0.001810   \n",
+       "A       2356329        0.0           0.0  2013    35.977760  0.001451   \n",
+       "A       4484784        0.0           0.0  2013    36.029961  0.020456   \n",
+       "A       5782547        0.0           0.0  2013    36.766983  0.026965   \n",
+       "A       2646694        0.0           0.0  2013    37.758400 -0.008810   \n",
+       "A       4129692        0.0           0.0  2013    37.425751 -0.007319   \n",
+       "\n",
+       "        hi_lo_range  rolling_avg_returns  \n",
+       "ticker                                    \n",
+       "A          0.365255                  NaN  \n",
+       "A          0.397871                  NaN  \n",
+       "A          0.723990                  NaN  \n",
+       "A          0.443525                  NaN  \n",
+       "A          0.763122                  NaN  \n",
+       "A          0.450047                  NaN  \n",
+       "A          0.541365                  NaN  \n",
+       "A          0.658767                  NaN  \n",
+       "A          0.795739                  NaN  \n",
+       "A          0.652245                  NaN  \n",
+       "A          0.469613             0.003793  \n",
+       "A          0.965324             0.006365  \n",
+       "A          1.024022             0.007833  \n",
+       "A          0.495704             0.007102  \n",
+       "A          0.495704             0.003884  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your code below.\n",
     "\n",
@@ -304,8 +653,7 @@
     "    .transform(lambda x: x.rolling(window=10).mean())  # Apply rolling mean\n",
     ")\n",
     "\n",
-    "# It was not strictly necessary to convert to pandas to calculate the moving average. However, according to dask dataframe best practices, it is recommended that dask dataframes are only used when the use case justifies it (ex: dataset is too large to be loaded into memory). The best practice is to use pandas for transformations when possible. \n",
-    "# Therefore, it's not better to have used Dask. "
+    "pd_feat.head(15)"
    ]
   },
   {
@@ -316,6 +664,8 @@
     "\n",
     "+ Was it necessary to convert to pandas to calculate the moving average return?\n",
     "+ Would it have been better to do it in Dask? Why?\n",
+    "<br> ANSWER: It was not strictly necessary to convert to pandas to calculate the moving average. However, according to dask dataframe best practices, it is recommended that dask dataframes are only used when the use case justifies it (ex: dataset is too large to be loaded into memory). The best practice is to use pandas for transformations when possible. \n",
+    "Therefore, it's not better to have used Dask. \n",
     "\n",
     "(1 pt)"
    ]
